[gd_scene load_steps=19 format=2]

[ext_resource path="res://clients/modern_client/modern_client2.gd" type="Script" id=1]
[ext_resource path="res://clients/util/curtain.png" type="Texture" id=2]
[ext_resource path="res://games/celda_escape/rooms/celda/images/background.jpg" type="Texture" id=3]
[ext_resource path="res://tools/theming/custom_label.gd" type="Script" id=4]
[ext_resource path="res://clients/modern_client/saved/game_list.gd" type="Script" id=5]
[ext_resource path="res://clients/modern_client/clicking.gd" type="Script" id=7]
[ext_resource path="res://clients/modern_client/saved/game_entry.tscn" type="PackedScene" id=12]
[ext_resource path="res://clients/modern_client/inventory.gd" type="Script" id=13]
[ext_resource path="res://clients/modern_client/inventory_item.tscn" type="PackedScene" id=15]
[ext_resource path="res://clients/modern_client/new_inventory/slider.gd" type="Script" id=17]
[ext_resource path="res://clients/modern_client/new_inventory/right.png" type="Texture" id=18]
[ext_resource path="res://clients/modern_client/tabs.gd" type="Script" id=19]
[ext_resource path="res://clients/modern_client/new_inventory/side_menu.gd" type="Script" id=20]
[ext_resource path="res://clients/modern_client/menu_button.tscn" type="PackedScene" id=21]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("curtain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("curtain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("curtain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("curtain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="modern_display" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="viewport_container" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="viewport" type="Viewport" parent="viewport_container"]
size = Vector2( 1920, 1080 )
size_override_stretch = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="empty_room" type="ColorRect" parent="viewport_container/viewport"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texture_rect" type="TextureRect" parent="viewport_container/viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 3
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inventory_base" type="Control" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
end_position = Vector2( 0, 180 )
delay = 1.5
initially_at_start = false

[node name="inventory" type="HBoxContainer" parent="ui/inventory_base"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
item_scene = ExtResource( 15 )

[node name="left" type="Control" parent="ui/inventory_base/inventory"]
margin_left = 704.0
margin_right = 804.0
margin_bottom = 1080.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 2
size_flags_vertical = 3

[node name="texture_rect" type="TextureRect" parent="ui/inventory_base/inventory/left"]
modulate = Color( 0.870588, 0.890196, 0.647059, 0.913725 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -175.0
margin_right = -7.62939e-06
margin_bottom = -25.0
mouse_filter = 2
size_flags_vertical = 0
texture = ExtResource( 18 )
stretch_mode = 6
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_container" parent="ui/inventory_base/inventory" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 808.0
margin_right = 958.0
margin_bottom = 1080.0

[node name="item_container2" parent="ui/inventory_base/inventory" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 962.0
margin_right = 1112.0
margin_bottom = 1080.0

[node name="right" type="Control" parent="ui/inventory_base/inventory"]
margin_left = 1116.0
margin_right = 1216.0
margin_bottom = 1080.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 2
size_flags_vertical = 3

[node name="texture_rect" type="TextureRect" parent="ui/inventory_base/inventory/right"]
modulate = Color( 0.870588, 0.890196, 0.647059, 0.913725 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -175.0
margin_right = -7.62939e-06
margin_bottom = -25.0
mouse_filter = 2
size_flags_vertical = 0
texture = ExtResource( 18 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tween" type="Tween" parent="ui/inventory_base"]

[node name="curtain" type="TextureRect" parent="ui"]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="ui"]
anchor_right = 1.0
margin_bottom = 72.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="curtain_animation" type="AnimationPlayer" parent="ui"]
anims/closed = SubResource( 1 )
anims/default = SubResource( 2 )
anims/down = SubResource( 3 )
anims/up = SubResource( 4 )

[node name="timer" type="Timer" parent="ui"]
one_shot = true

[node name="tool" type="TextureRect" parent="ui"]
visible = false
margin_right = 100.0
margin_bottom = 100.0
expand = true
stretch_mode = 6

[node name="menu" type="ColorRect" parent="ui"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tab_container" type="Control" parent="ui/menu"]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 139.0
margin_top = 160.0
margin_right = -187.0
margin_bottom = -168.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="ui/menu/tab_container"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.490196, 0.490196, 0.490196, 0.160784 )

[node name="tabs" type="Control" parent="ui/menu/tab_container"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Control" parent="ui/menu/tab_container/tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Control" parent="ui/menu/tab_container/tabs/title"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
text = "Celda"
label_type = "big"

[node name="game_list" type="Control" parent="ui/menu/tab_container/tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v_box_container" type="VBoxContainer" parent="ui/menu/tab_container/tabs/game_list"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
entry_model = ExtResource( 12 )

[node name="control" parent="ui/menu/tab_container/tabs/game_list/v_box_container" instance=ExtResource( 12 )]
margin_top = 301.0
margin_right = 826.0
margin_bottom = 451.0

[node name="side_menu" type="Control" parent="ui/menu"]
anchor_right = 0.4
anchor_bottom = 1.0
margin_right = -6.10352e-05
mouse_filter = 2
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}
slide_mode = 0
end_position = Vector2( -770, 0 )
delay = 2.0
end_enabled = false
overlay_path = NodePath("../../menu")

[node name="VBoxContainer" type="VBoxContainer" parent="ui/menu/side_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" parent="ui/menu/side_menu/VBoxContainer" groups=[
"only_if_playing",
] instance=ExtResource( 21 )]
margin_top = 3.0
margin_bottom = 153.0
caption = "Continue"

[node name="save_game" parent="ui/menu/side_menu/VBoxContainer" groups=[
"only_if_playing",
] instance=ExtResource( 21 )]
margin_top = 157.0
margin_bottom = 307.0
caption = "Save game"

[node name="continue_previous" parent="ui/menu/side_menu/VBoxContainer" groups=[
"only_if_saved",
] instance=ExtResource( 21 )]
margin_top = 311.0
margin_bottom = 461.0
caption = "Continue play"

[node name="new_game" parent="ui/menu/side_menu/VBoxContainer" instance=ExtResource( 21 )]
margin_top = 465.0
margin_bottom = 615.0
caption = "New game"

[node name="load_game" parent="ui/menu/side_menu/VBoxContainer" instance=ExtResource( 21 )]
margin_top = 619.0
margin_bottom = 769.0
caption = "Load game"

[node name="options" parent="ui/menu/side_menu/VBoxContainer" instance=ExtResource( 21 )]
margin_top = 773.0
margin_bottom = 923.0
caption = "Options"

[node name="quit" parent="ui/menu/side_menu/VBoxContainer" instance=ExtResource( 21 )]
margin_top = 927.0
margin_bottom = 1077.0
caption = "Quit"

[node name="tween" type="Tween" parent="ui/menu/side_menu"]

[node name="back_button" type="Button" parent="ui/menu"]
margin_left = 1061.05
margin_top = 927.002
margin_right = 1609.05
margin_bottom = 1049.0
text = "Cancel"

[node name="status" type="Label" parent="ui"]
margin_left = 645.989
margin_top = 927.257
margin_right = 1810.99
margin_bottom = 1043.26
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="preload" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="color_rect" type="ColorRect" parent="preload"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.796078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="preload"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -289.0
text = "Trying to load the game..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Button" parent="preload"]
margin_left = 621.313
margin_top = 773.053
margin_right = 1283.31
margin_bottom = 936.053
text = "Quit"
[connection signal="click" from="ui" to="." method="_on_ui_click"]
[connection signal="drag" from="ui" to="." method="_on_ui_drag"]
[connection signal="end_drag" from="ui" to="." method="_on_ui_end_drag"]
[connection signal="end_hold" from="ui" to="." method="_on_ui_end_hold"]
[connection signal="lock_hold" from="ui" to="." method="_on_ui_lock_hold"]
[connection signal="start_drag" from="ui" to="." method="_on_ui_start_drag"]
[connection signal="start_hold" from="ui" to="." method="_on_ui_start_hold"]
[connection signal="timeout" from="ui/timer" to="ui" method="_on_timer_timeout"]
[connection signal="pressed" from="ui/menu/side_menu/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="ui/menu/side_menu/VBoxContainer/save_game" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="ui/menu/side_menu/VBoxContainer/continue_previous" to="." method="_on_continue_previous_pressed"]
[connection signal="pressed" from="ui/menu/side_menu/VBoxContainer/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="ui/menu/side_menu/VBoxContainer/load_game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="ui/menu/side_menu/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ui/menu/side_menu/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="ui/menu/back_button" to="." method="_on_back_button_pressed"]

[editable path="ui/menu/tab_container/tabs/game_list/v_box_container/control"]
